--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.6.95",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vue-tawk": "^1.0.1",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "x2js": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
