--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-router": "^3.1.5",
     "vue-tawk": "^1.0.1",
     "vuetify": "^2.2.11",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "x2js": "^3.4.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
